--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <h3>Brothers In Arms</h3>
         <h4>Author:Paul Langan & Ben Alirez</h4>
         <image src="https://m.media-amazon.com/images/I/51iO6KMFtJL._SL350_.jpg"/>
-        <p>New Bluford High School attendee, Martin Luna, has just lost is younger brother to a shooting and demands vengeance. His mother sincerely suggests otherwise due to Martin being her only remaining son. Will he take heed to her warning or take matters into his own hands for his brother's sake?</p>
+        <p>New Bluford High School attendee, Martin Luna, has just lost his younger brother to a shooting and demands vengeance. His mother sincerely suggests otherwise due to Martin being her only remaining son. Will he take heed to her warning or take matters into his own hands for his brother's sake?</p>
 
 
     </li>
@@ -15,10 +15,13 @@
 
     <li>
         <h3>Behold a Pale Horse</h3>
-        <h4>Author:Milton William Cooper - former U.S. naval intelligence Op</h4>
+        <h4>Author:Milton William Cooper</h4>
         <image src="https://th.bing.com/th/id/OIP.msVzoD_uyWZHYTivF0XkVQHaLG?rs=1&pid=ImgDetMain.jpg"/>
         <p>Bill Cooper, former United States Naval Intelligence Briefing Team member, reveals information that remains hidden from the public eye. </p>
 
     </li>
+
+
+</ol>    
 
 </body>    
